Added security tags for external links

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -67,7 +67,7 @@
                            (click)="isCollapsed = true; isCollapsedBRW = true"
                            href="https://www.boris.niedersachsen.de/boris/login"
                            target="_blank"
-                           rel="noreferrer"
+                           rel="noopener noreferrer nofollow"
                            i18n>Bodenrichtwerte - amtlicher Ausdruck</a>
 
                         <a class="dropdown-item"
@@ -82,7 +82,7 @@
                            (click)="isCollapsed = true; isCollapsedImmo = true"
                            href="https://www.gag.niedersachsen.de/grundstuecksmarktinformationen/landesgrundstucksmarktinformationen-193837.html"
                            target="_blank"
-                           rel="noreferrer"
+                           rel="noopener noreferrer nofollow"
                            i18n>Grundstücksmarktdaten</a>
                     </div>
                 </li>
@@ -113,7 +113,7 @@
                            (click)="isCollapsed = true; isCollapsedImmo = true"
                            href="https://www.boris.niedersachsen.de/boris/ipk"
                            target="_blank"
-                           rel="noreferrer"
+                           rel="noopener noreferrer nofollow"
                            i18n>Immobilienpreiskalkulator - IPK</a>
 
                         <a class="dropdown-item"
@@ -121,7 +121,7 @@
                            (click)="isCollapsed = true; isCollapsedImmo = true"
                            href="https://www.gag.niedersachsen.de/grundstuecksmarktinformationen/landesgrundstucksmarktinformationen-193837.html"
                            target="_blank"
-                           rel="noreferrer"
+                           rel="noopener noreferrer nofollow"
                            i18n>Grundstücksmarktdaten</a>
                     </div>
                 </li>
@@ -229,15 +229,19 @@
                         i18n>Sprache</h5>
                     <a href="{{ baseurl }}"
                        class="footer-link"
+                       rel="noopener"
                        aria-labelledby="languages">Deutsch</a>
                     - <a href="/en{{ baseurl }}"
                        class="footer-link"
+                       rel="noopener"
                        aria-labelledby="languages">English</a>
                     - <a href="/fr{{ baseurl }}"
                        class="footer-link"
+                       rel="noopener"
                        aria-labelledby="languages">Français</a>
                     - <a href="/ja{{ baseurl }}"
                        class="footer-link"
+                       rel="noopener"
                        aria-labelledby="languages">日本語</a>
                     <hr>
                     <h5 i18n>Informationen</h5>
@@ -246,21 +250,21 @@
                             <a href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/impressum/impressum-92629.html"
                                class="footer-link"
                                target="_blank"
-                               rel="noreferrer"
+                               rel="noopener noreferrer nofollow"
                                i18n>Impressum</a>
                         </li>
                         <li class="m-2">
                             <a href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/datenschutz/datenschutz-im-lgln-138166.html"
                                class="footer-link"
                                target="_blank"
-                               rel="noreferrer"
+                               rel="noopener noreferrer nofollow"
                                i18n>Datenschutz</a>
                         </li>
                         <li class="m-2">
                             <a href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/allgemeine_geschafts_und_nutzungsbedingungen_agnb/allgemeine-geschafts-und-nutzungsbedingungen-agnb-97401.html"
                                class="footer-link"
                                target="_blank"
-                               rel="noreferrer"
+                               rel="noopener noreferrer nofollow"
                                i18n>Allgemeine Geschäfts- und Nutzungsbedingungen</a>
                         </li>
                     </ul>
