--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -37,7 +37,7 @@
             Ein Benutzeraccount ist hierfür erforderlich.</p>
         <a href="https://www.boris.niedersachsen.de/boris/login"
            target="_blank"
-           rel="noreferrer">
+           rel="noopener noreferrer nofollow">
             <svg width="1em"
                  height="1em"
                  viewBox="0 0 16 16"
