--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -394,7 +394,7 @@
         </accordion>
 
         <div style="text-align: center; margin-top: 1rem;">
-            <a href="{{nipixStatic.agnbUrl}}" target="_blank" rel="noreferrer"
+            <a href="{{nipixStatic.agnbUrl}}" target="_blank" rel="noopener noreferrer nofollow"
                 i18n="AGNB">Allgemeinen Geschäfts- und Nutzungsbedingungen (AGNB)</a>
         </div>
     </div>
