--- a/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
+++ b/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
@@ -10,13 +10,13 @@ i18n>Hilfe zur Formatierung</button>
     <p>
         <label i18n>Für die Formatierung und Gliederung von Texten wird "Markdown" verwendet. Eine Einführung finden Sie
             unter:</label>
-        <a href="https://en.wikipedia.org/wiki/Markdown" target="_blank"> Wikipedia</a>
+        <a href="https://en.wikipedia.org/wiki/Markdown" target="_blank" rel="noopener noreferrer nofollow"> Wikipedia</a>
     </p>
 
     <p>
         <label i18n>Es ist eine Auszeichnungssprache und ist im Internet im technischen Umfeld verbreitet. Lesen Sie
             weitere Details unter der folgenden Seite:</label>
-        <a href="https://daringfireball.net/projects/markdown/syntax" target="_blank">
+        <a href="https://daringfireball.net/projects/markdown/syntax" target="_blank" rel="noopener noreferrer nofollow">
             https://daringfireball.net/projects/markdown/syntax</a>
     </p>
 
@@ -89,7 +89,7 @@ i18n>Hilfe zur Formatierung</button>
                 <td><label>#### text</label></td>
             </tr>
             <tr>
-                <td><label><a href="https://en.wikipedia.org/wiki/Markdown">Link</a></label></td>
+                <td><label><a href="https://en.wikipedia.org/wiki/Markdown" rel="noopener noreferrer nofollow">Link</a></label></td>
                 <td><label>[Link](https://en.wikipedia.org/wiki/Markdown)</label></td>
             </tr>
             <tr>
