BORIS.NI to BORIS.NI mobile

--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -9,7 +9,7 @@
                 <a class="h2 btn-link text-dark font-weight-bold"
                    id="boris"
                    [routerLink]="['/bodenrichtwerte']"
-                   i18n>BORIS.NI</a>
+                   i18n>BORIS.NI mobile</a>
                 <h6 i18n>Bodenrichtwertinformationssystem Niedersachsen</h6>
                 <p class="lead text-justify"
                    i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte in Niedersachsen
