Boris info text

--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -12,9 +12,9 @@
                    i18n>BORIS.NI mobile</a>
                 <h6 i18n>Bodenrichtwertinformationssystem Niedersachsen</h6>
                 <p class="lead text-justify"
-                   i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte in Niedersachsen
+                   i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte in Niedersachsen und Bremen
                     stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und für Flächen der Land-
-                    und Forstwirtschaft zur Verfügung.</p>
+                    und Forstwirtschaft in Niedersachsen, Bremen und Bremerhaven zur Verfügung.</p>
             </div>
         </div>
     </section>
