--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -13,7 +13,7 @@
                 <h6 i18n>Bodenrichtwertinformationssystem Niedersachsen</h6>
                 <p class="lead text-justify"
                    i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte in Niedersachsen und Bremen
-                    stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und für Flächen der Land-
+                    stellen interessierten Nutzern unter BORIS.NI mobile Bodenrichtwerte für Bauland und für Flächen der Land-
                     und Forstwirtschaft in Niedersachsen, Bremen und Bremerhaven zur Verfügung.</p>
             </div>
         </div>
