--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -106,7 +106,7 @@
                            (click)="isCollapsed = true; isCollapsedImmo = true"
                            [routerLink]="['/immobilienpreisindex']"
                            routerLinkActive="active"
-                           i18n>Niedersächsischer Immobilienpreisindex – NIPIX</a>
+                           i18n>Niedersächsischer Immobilienpreisindex - NIPIX</a>
 
                         <a class="dropdown-item"
                            *ngIf="config.modules.includes('immobilienpreiskalkulator')"
