Updated dependencies and fixed cache 2

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -5,7 +5,7 @@
            title="Zur Startseite"
            [routerLink]="['/']"
            style="color: #343a40;">
-            <img src="/assets/logos/logo.png"
+            <img src="./assets/logos/logo.png"
                  class="mr-2 align-top"
                  aria-hidden="true"
                  height="25px"
@@ -24,7 +24,7 @@
             <strong class="d-inline d-sm-none">
                 <span i18n>POWER</span>
                 <span style="color: #c4153a;"
-                      i18n>.ni</span>
+                      i18n>.NI</span>
             </strong>
         </a>
 
