Added amtliche druckfunktion

--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -1,5 +1,5 @@
 <!-- Keine Nutzung des <table>-Elements, da fehlendes responsive-Verhalten  -->
-<div class="card m-0"
+<div class="card m-0 mb-2"
      role="table">
     <div class="card-header">
         <div class="sr-only caption"
