--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -158,6 +158,34 @@
                                 <p class="m-3 mx-center"
                                    i18n>Die Genauigkeit des Suchradius für die Adresse beträgt 50 Meter.</p>
                             </div>
+
+                            <div class="mb-2">
+                                <a class="btn btn-primary"
+                                   role="button"
+                                   [href]="printURL()"
+                                   target="_blank"
+                                   rel="noopener noreferrer nofollow"
+                                   i18n-title
+                                   title="Auszug aus der Bodenrichtwertkarte">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                         width="16"
+                                         height="16"
+                                         fill="currentColor"
+                                         class="bi bi-file-earmark-richtext"
+                                         viewBox="0 0 16 16"
+                                         focusable="false"
+                                         aria-hidden="true">
+                                        <path
+                                              d="M4 0h5.5v1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h1V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2z" />
+                                        <path d="M9.5 3V0L14 4.5h-3A1.5 1.5 0 0 1 9.5 3z" />
+                                        <path fill-rule="evenodd"
+                                              d="M4.5 12.5A.5.5 0 0 1 5 12h3a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zm0-2A.5.5 0 0 1 5 10h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zm1.639-3.708l1.33.886 1.854-1.855a.25.25 0 0 1 .289-.047l1.888.974V8.5a.5.5 0 0 1-.5.5H5a.5.5 0 0 1-.5-.5V8s1.54-1.274 1.639-1.208zM6.25 6a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5z" />
+                                    </svg>
+                                    <span class="d-none d-md-inline ml-1"
+                                          i18n>Auszug aus der Bodenrichtwertkarte</span>
+                                </a>
+                            </div>
+
                             <power-bodenrichtwert-liste [stichtag]="stichtag"
                                                         [teilmarkt]="teilmarkt"
                                                         [features]="features">
