--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -26,7 +26,7 @@
                                 <button type="button"
                                         role="menuitem"
                                         class="dropdown-item"
-                                        *ngFor="let stag of STICHTAGE"
+                                        *ngFor="let stag of bodenrichtwertService.STICHTAGE"
                                         (click)="onStichtagChange(stag)">
                                     {{stag | date}}
                                 </button>
@@ -53,7 +53,7 @@
                                 <button type="button"
                                         role="menuitem"
                                         class="dropdown-item"
-                                        *ngFor="let tm of TEILMAERKTE"
+                                        *ngFor="let tm of bodenrichtwertService.TEILMAERKTE"
                                         (click)="onTeilmarktChange(tm)">
                                     <svg width="0.75em"
                                          height="0.75em"
@@ -326,7 +326,7 @@
                     <button type="button"
                             role="menuitem"
                             class="dropdown-item"
-                            *ngFor="let stag of STICHTAGE"
+                            *ngFor="let stag of bodenrichtwertService.STICHTAGE"
                             (click)="onStichtagChange(stag)">
                         {{stag | date}}
                     </button>
@@ -354,7 +354,7 @@
                     <button type="button"
                             role="menuitem"
                             class="dropdown-item"
-                            *ngFor="let tm of TEILMAERKTE"
+                            *ngFor="let tm of bodenrichtwertService.TEILMAERKTE"
                             (click)="onTeilmarktChange(tm)">
                         <svg width="0.75em"
                              height="0.75em"
