Fix missing i18n tag

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -240,8 +240,8 @@
                 <span class="ml-2"
                       i18n>Veralteter Webbrowser erkannt</span>
             </span>
-            <p class="m-0">Bitte verwenden Sie einen aktuelleren Webbrowser, wie den Google Chrome oder Mozilla Firefox.
-            </p>
+            <p class="m-0"
+               i18n>Bitte verwenden Sie einen aktuelleren Webbrowser, wie den Google Chrome oder Mozilla Firefox.</p>
         </alert>
     </div>
 
