Changed browser warning text

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -238,10 +238,11 @@
                           d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995z" />
                 </svg>
                 <span class="ml-2"
-                      i18n>Veralteter Webbrowser erkannt</span>
+                      i18n>Veralteten oder nicht unterstützen Webbrowser erkannt</span>
             </span>
             <p class="m-0"
-               i18n>Bitte verwenden Sie einen aktuelleren Webbrowser, wie den Google Chrome oder Mozilla Firefox.</p>
+               i18n>Bitte verwenden Sie einen aktuelleren Webbrowser, wie Google Chrome oder Mozilla Firefox, um alle
+                Funktionen dieser Seite uneingeschränkt nutzen zu können.</p>
         </alert>
     </div>
 
