Fixed verlauf-display problem

--- a/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
@@ -67,12 +67,12 @@
              [options]="chartOption"></div>
     </ng-container>
 
-    <!-- <ng-container *ngIf="!echartsInstance"> -->
+    <ng-container *ngIf="!echartsInstance">
         <div id="eChartInstance"
              echarts
              (chartInit)="onChartInit($event)"
              [options]="chartOption"></div>
-    <!-- </ng-container> -->
+    </ng-container>
 
     <div>
         <p i18n
